add new enpoints and dtos
